fix menu item wrapping

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
   left: 0;
   bottom: 0;
   background-color: rgba(17, 17, 17, 1);
-  overflow-x: hidden;
+  overflow-x: auto;
   overflow-y: auto;
   padding-top: 20px;
   transition: all 0.3s ease-in-out;
@@ -68,8 +68,8 @@ body {
   text-align: left;
   cursor: pointer;
   outline: none;
+  white-space: nowrap;
   transition: all 0.3s ease-in-out;
-  overflow-x: hidden;
 }
 
 /* On mouse-over */
